<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/wrapper"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:background="@drawable/background"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/highResIconSection"
            android:padding="@dimen/activity_vertical_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_maps"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_name"
                    android:textColor="@color/black"
                    android:layout_marginBottom="4dp"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/google_inc" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/installSection"
            android:gravity="center"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uninstall"
                android:textColor="@color/android_green"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginRight="3dp"
                android:id="@+id/uninstallBtn"
                android:onClick="click"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:text="@string/open"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginLeft="3dp"
                android:textColor="@color/white"
                android:background="@color/android_green"
                android:id="@+id/openBtn"
                android:onClick="click"/>

        </LinearLayout>

        <View
            style="@style/divader"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            android:id="@+id/ratingSection"
            android:gravity="center">

            <!--first icon layout-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">

                <ImageView
                    style="@style/rating_icons"
                    android:src="@drawable/ic_billion" />

                <TextView
                    style="@style/rating_texts"
                    android:text="@string/downloads" />

            </LinearLayout>

            <!--second icon layout-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">

                <ImageView
                style="@style/rating_icons"
                android:src="@drawable/ic_rating" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/rating_texts"
                        android:text="@string/rating_number" />

                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:paddingLeft="1dp"
                        android:src="@drawable/ic_person"
                        android:layout_gravity="center" />

                </LinearLayout>


            </LinearLayout>

            <!--third icon layout-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">

                <ImageView
                    style="@style/rating_icons"
                    android:src="@drawable/ic_travel"
                    android:id="@+id/travelIcon"
                    android:onClick="click"/>

                <TextView
                    style="@style/rating_texts"
                    android:text="@string/travel_location"
                    android:id="@+id/travelIconText"/>

            </LinearLayout>

            <!--forth icon layout-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">

                <ImageView
                    style="@style/rating_icons"
                    android:src="@drawable/ic_similar"
                    android:id="@+id/similarIcon"
                    android:onClick="click"/>

                <TextView
                    style="@style/rating_texts"
                    android:text="@string/similar"
                    android:id="@+id/similarIconText" />

            </LinearLayout>

        </LinearLayout>

        <View
            style="@style/divader"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/get_maps"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#737373" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/background_green"
            android:orientation="vertical">

            <TextView
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="@string/update_text"
                android:textColor="@color/android_green"
                android:lineSpacingExtra="3dp"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_watch"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/read_more"
            android:textColor="@color/android_green"
            android:gravity="center"
            android:textSize="15sp"/>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/horizontal_scrollView"
                    android:src="@drawable/first" />

                <ImageView
                    style="@style/horizontal_scrollView"
                    android:src="@drawable/second" />

                <ImageView
                    style="@style/horizontal_scrollView"
                    android:src="@drawable/third" />

                <ImageView
                    style="@style/horizontal_scrollView"
                    android:src="@drawable/forth" />

                <ImageView
                    style="@style/horizontal_scrollView"
                    android:src="@drawable/fifth" />

                <ImageView
                    style="@style/horizontal_scrollView"
                    android:src="@drawable/sixth" />

            </LinearLayout>

        </HorizontalScrollView>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rate_app"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:gravity="center"/>

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_gravity="center"
                android:numStars="5" />
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/review_text"
                android:textSize="13sp"
                android:textStyle="italic"
                android:gravity="center"/>

        </LinearLayout>

        <View
            style="@style/divader"
            android:layout_margin="@dimen/activity_vertical_margin"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

    </LinearLayout>
</ScrollView>